Draw a quadratic curve which explains the 4 data points best using GDM

--- a/DL Methodology/Simple GDM.ipynb
+++ b/DL Methodology/Simple GDM.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Draw a quadratic curve which explains the 4 data points best using Gradient Descent Method"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
